# transport_mt3d_working

./: .gitignore  pyproject.toml
ex-gwt-mt3dms-p09/: ex-gwt-mt3dms-p09.tdis  gwf-p09-mf6.bud  gwf-p09-mf6.chd  gwf-p09-mf6.dis  gwf-p09-mf6.hds  gwf-p09-mf6.ic  gwf-p09-mf6.ims  gwf-p09-mf6.lst  gwf-p09-mf6.nam  gwf-p09-mf6.npf  gwf-p09-mf6.oc  gwf-p09-mf6.sto  gwf-p09-mf6.wel  gwt-p09-mf6.adv  gwt-p09-mf6.cbc  gwt-p09-mf6.dis  gwt-p09-mf6.dsp  gwt-p09-mf6.ic  gwt-p09-mf6.ims  gwt-p09-mf6.lst  gwt-p09-mf6.mst  gwt-p09-mf6.nam  gwt-p09-mf6.oc  gwt-p09-mf6.ssm  gwt-p09-mf6.ucn  mfsim.lst  mfsim.nam  p09-mf6.gwfgwt
ex-gwt-mt3dms-p09/mt3d/: MT3D001.MAS  MT3D001.UCN  mt3d_link.ftl  p09-mf.bas  p09-mf.dis  p09-mf.list  p09-mf.lmt6  p09-mf.nam  p09-mf.wel  p09-mt.btn  p09-mt.list
linux/: code.json  gridgen  mfusg  mfusgdbl  mp6  mp7  mt3dms  mt3dusgs  sutra  zbud6
working/: ex-gwt-mt3dms-p09_mod.ipynb  ex-gwt-mt3dms-p09_og.ipynb
working/ex-gwt-mt3dms-p09/: ex-gwt-mt3dms-p09.tdis  gwf-p09-mf6.chd  gwf-p09-mf6.dis  gwf-p09-mf6.ic  gwf-p09-mf6.ims  gwf-p09-mf6.nam  gwf-p09-mf6.npf  gwf-p09-mf6.oc  gwf-p09-mf6.sto  gwf-p09-mf6.wel  gwt-p09-mf6.adv  gwt-p09-mf6.dis  gwt-p09-mf6.dsp  gwt-p09-mf6.ic  gwt-p09-mf6.ims  gwt-p09-mf6.mst  gwt-p09-mf6.nam  gwt-p09-mf6.oc  gwt-p09-mf6.ssm  mfsim.nam  p09-mf6.gwfgwt
working/ex-gwt-mt3dms-p09/mt3d/: p09-mf.lpf  p09-mt.nam
