[project]
name = "modflow6-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flopy>=3.10.0",
    "git-python>=1.0.3",
    "jupytext>=1.19.1",
    "matplotlib>=3.10.9",
    "modflow-devtools>=1.9.2",
    "numpy>=2.4.4",
    "pooch>=1.9.0",
]
